--- a/style.css
+++ b/style.css
@@ -185,3 +185,9 @@ a:hover {
     box-shadow: 0 5px 4px 0 rgba(0, 0, 0, .3);
     border:  4px solid white;
 }
+
+@media screen and (max-width: 700px) {
+    footer {
+        height: 30vh;
+    }
+}
