--- a/style.css
+++ b/style.css
@@ -148,8 +148,8 @@ a:hover {
 
 .modal {
     background: white;
-    width: 60vw;
-    /*min-width: 50px; Quando chegar nesse limite ele para de diminuir*/
+    width: 60%;
+    min-width: 50px; /*Quando chegar nesse limite ele para de diminuir*/
     padding: 40px;
     border: 10px solid black;
     position: relative;
