--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ footer {
     background-color: black;
     color: white;
 
-    margin-top: 50px;
+    height: 15vh;
     padding: 30px;
 
     display: flex;
